[tool.poetry]
name = "mlmt"
version = "0.0.5"
description = "A Machine Learning Multi-Tool"
authors = ["Rick Lan <rlan@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rlan/mlmt"
homepage = "https://github.com/rlan/mlmt"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.0"
pandas = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
