[metadata]
name = mlmt
version = attr: mlmt.__version__
author = Rick Lan
author_email = rlan@users.noreply.github.com
description = A Machine Learning Multi-Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rlan/mlmt
project_urls =
    Bug Tracker = https://github.com/rlan/mlmt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
